--- a/Contact.html
+++ b/Contact.html
@@ -305,6 +305,7 @@
         <li role="none"><a href="services.html" role="menuitem">Services</a></li>
         <li role="none"><a href="contact.html" role="menuitem" class="active">Contact</a></li>
         <li role="none"><a href="faq.html" role="menuitem">FAQ</a></li>
+        <li><a href="blog.html"><span class="material-icons">article</span> Blog</a></li>
       </ul>
     </div>
   </nav>
