--- a/FAQ.HTML
+++ b/FAQ.HTML
@@ -349,6 +349,7 @@
         <li role="none"><a href="services.html" role="menuitem">Services</a></li>
         <li role="none"><a href="contact.html" role="menuitem">Contact</a></li>
         <li role="none"><a href="faq.html" class="active" role="menuitem">FAQ</a></li>
+        <li><a href="blog.html"><span class="material-icons">article</span> Blog</a></li>
       </ul>
     </div>
   </nav>
