--- a/about.html
+++ b/about.html
@@ -247,6 +247,7 @@
     <li><a href="services.html">Services</a></li>
     <li><a href="contact.html">Contact</a></li>
     <li><a href="faq.html">FAQ</a></li>
+    <li><a href="blog.html"><span class="material-icons">article</span> Blog</a></li>
   </ul>
   <button class="theme-toggle" onclick="toggleTheme()">🌓</button>
 </nav>
