--- a/services.html
+++ b/services.html
@@ -342,6 +342,7 @@
       <li role="none"><a href="services.html" role="menuitem" class="active">Services</a></li>
       <li role="none"><a href="contact.html" role="menuitem">Contact</a></li>
       <li role="none"><a href="faq.html" role="menuitem">FAQ</a></li>
+      <li><a href="blog.html"><span class="material-icons">article</span> Blog</a></li>
     </ul>
     <button class="theme-toggle" onclick="toggleTheme()" aria-label="Toggle light/dark theme">🌓</button>
   </div>
