--- a/about.html
+++ b/about.html
@@ -240,16 +240,17 @@
     <span></span>
     <span></span>
     <span></span>
-  </button>
-  <ul id="nav-links">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html" class="active">About</a></li>
-    <li><a href="services.html">Services</a></li>
-    <li><a href="contact.html">Contact</a></li>
-    <li><a href="faq.html">FAQ</a></li>
-    <li><a href="blog.html"><span class="material-icons">article</span> Blog</a></li>
-  </ul>
-  <button class="theme-toggle" onclick="toggleTheme()">🌓</button>
+</button>
+    <ul class="nav-links" id="nav-links">
+      <li><a href="index.html"><span class="material-icons">home</span> Home</a></li>
+      <li><a href="about.html"><span class="material-icons">person</span> About</a></li>
+      <li><a href="services.html"><span class="material-icons">build</span> Services</a></li>
+      <li><a href="contact.html"><span class="material-icons">mail</span> Contact</a></li>
+      <li><a href="faq.html"><span class="material-icons">help</span> FAQ</a></li>
+      <li><a href="blog.html"><span class="material-icons">article</span> Blog</a></li>
+    </ul>
+    <button class="theme-toggle" onclick="toggleTheme()"><span class="material-icons">brightness_4</span></button>
+  </div>
 </nav>
 
 <main>
