--- a/FAQ.HTML
+++ b/FAQ.HTML
@@ -341,18 +341,17 @@
         <span></span>
         <span></span>
       </button>
-
-      <!-- Navigation links -->
-      <ul id="primary-navigation" role="menu">
-        <li role="none"><a href="index.html" role="menuitem">Home</a></li>
-        <li role="none"><a href="about.html" role="menuitem">About</a></li>
-        <li role="none"><a href="services.html" role="menuitem">Services</a></li>
-        <li role="none"><a href="contact.html" role="menuitem">Contact</a></li>
-        <li role="none"><a href="faq.html" class="active" role="menuitem">FAQ</a></li>
-        <li><a href="blog.html"><span class="material-icons">article</span> Blog</a></li>
-      </ul>
-    </div>
-  </nav>
+    <ul class="nav-links" id="nav-links">
+      <li><a href="index.html"><span class="material-icons">home</span> Home</a></li>
+      <li><a href="about.html"><span class="material-icons">person</span> About</a></li>
+      <li><a href="services.html"><span class="material-icons">build</span> Services</a></li>
+      <li><a href="contact.html"><span class="material-icons">mail</span> Contact</a></li>
+      <li><a href="faq.html"><span class="material-icons">help</span> FAQ</a></li>
+      <li><a href="blog.html"><span class="material-icons">article</span> Blog</a></li>
+    </ul>
+    <button class="theme-toggle" onclick="toggleTheme()"><span class="material-icons">brightness_4</span></button>
+  </div>
+</nav>
 
   <main>
     <section class="faq-section" aria-label="Frequently Asked Questions">
