--- a/post1.html
+++ b/post1.html
@@ -111,7 +111,7 @@
   <h1>How to Structure a Thesis Chapter by Chapter</h1>
 
   <p class="author-date">
-    <span class="material-icons">person</span> Brian Ogot, the founder of Smart Essay Coach
+    <span class="material-icons">person</span> Brian Ogot, Founder- Smart Essay Coach
     &nbsp;&nbsp;|&nbsp;&nbsp;
     <span class="material-icons">event</span> July 5, 2025
   </p>
