--- a/post2.html
+++ b/post2.html
@@ -131,7 +131,7 @@
   <h1>APA vs MLA vs Chicago: A Quick Style Guide</h1>
 
   <p class="author-date">
-    <span class="material-icons">person</span> Brian Ogot, the founder of Smart Essay Coach
+    <span class="material-icons">person</span> Brian Ogot, Founder- Smart Essay Coach
     &nbsp;&nbsp;|&nbsp;&nbsp;
     <span class="material-icons">event</span> July 5, 2025
   </p>
