--- a/post3.html
+++ b/post3.html
@@ -135,7 +135,7 @@
   <h1>AI Detection in 2025: How to Stay Original</h1>
 
   <p class="author-date">
-    <span class="material-icons">person</span> Brian Ogot, the founder of Smart Essay Coach
+    <span class="material-icons">person</span> Brian Ogot, Founder- Smart Essay Coach
     &nbsp;&nbsp;|&nbsp;&nbsp;
     <span class="material-icons">event</span> July 5, 2025
   </p>
