--- a/blog.html
+++ b/blog.html
@@ -337,30 +337,63 @@
 </header>
 
 <main class="blog-grid" data-aos="fade-up" aria-label="Blog post listings">
+  <!-- Post 1 -->
   <article class="blog-card" tabindex="0" role="article" aria-labelledby="post1-title" aria-describedby="post1-desc">
     <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?auto=format&fit=crop&w=800&q=80" alt="Stack of books and open notebook" loading="lazy" />
     <div class="blog-content">
       <h2 id="post1-title">How to Structure a Thesis Chapter by Chapter</h2>
       <p id="post1-desc">Confused about where to begin your literature review or how to link chapters together? Here’s a clear roadmap to writing your thesis.</p>
-      <a href="post1.html" class="read-more" aria-label="Read more about How to Structure a Thesis Chapter by Chapter">Read More →</a>
+      <a href="post1.html" class="read-more">Read More →</a>
     </div>
   </article>
 
+  <!-- Post 2 -->
   <article class="blog-card" tabindex="0" role="article" aria-labelledby="post2-title" aria-describedby="post2-desc">
     <img src="https://images.unsplash.com/photo-1515377905703-c4788e51af15?auto=format&fit=crop&w=800&q=80" alt="Laptop and citation notes" loading="lazy" />
     <div class="blog-content">
       <h2 id="post2-title">APA vs MLA vs Chicago: A Quick Style Guide</h2>
       <p id="post2-desc">Struggling to remember when to italicize or use quotation marks? This cheat sheet simplifies citation rules for you.</p>
-      <a href="post2.html" class="read-more" aria-label="Read more about APA vs MLA vs Chicago: A Quick Style Guide">Read More →</a>
+      <a href="post2.html" class="read-more">Read More →</a>
     </div>
   </article>
 
+  <!-- Post 3 -->
   <article class="blog-card" tabindex="0" role="article" aria-labelledby="post3-title" aria-describedby="post3-desc">
     <img src="https://images.unsplash.com/photo-1518770660439-4636190af475?auto=format&fit=crop&w=800&q=80" alt="Person working with AI interface on laptop" loading="lazy" />
     <div class="blog-content">
       <h2 id="post3-title">AI Detection in 2025: How to Stay Original</h2>
       <p id="post3-desc">With AI detection tools evolving, learn safe practices for writing essays that won't be flagged or mistaken for AI content.</p>
-      <a href="post3.html" class="read-more" aria-label="Read more about AI Detection in 2025: How to Stay Original">Read More →</a>
+      <a href="post3.html" class="read-more">Read More →</a>
+    </div>
+  </article>
+
+  <!-- Post 4 -->
+  <article class="blog-card" tabindex="0" role="article" aria-labelledby="post4-title" aria-describedby="post4-desc">
+    <img src="https://vecteezy.com/free-photo/39272486-ai-generated-stressed-young-man-at-work.jpg" alt="Stressed student and glowing digital brain connection" loading="lazy" />
+    <div class="blog-content">
+      <h2 id="post4-title">Is Your Essay “Too Perfect”? The Hidden AI Hurdles</h2>
+      <p id="post4-desc">AI detectors flag essays that sound too good. Discover why and how it affects real students who write with excellence.</p>
+      <a href="post4.html" class="read-more">Read More →</a>
+    </div>
+  </article>
+
+  <!-- Post 5 -->
+  <article class="blog-card" tabindex="0" role="article" aria-labelledby="post5-title" aria-describedby="post5-desc">
+    <img src="https://stock.adobe.com/fr/images/student-writing-on-notebook-while-study-at-home/454512386.jpg" alt="Student confidently writing at laptop" loading="lazy" />
+    <div class="blog-content">
+      <h2 id="post5-title">Beat the Bots: Smart Strategies to Stay Human</h2>
+      <p id="post5-desc">Worried about AI flags? Learn writing techniques that emphasize your voice, analysis, and authentic content.</p>
+      <a href="post5.html" class="read-more">Read More →</a>
+    </div>
+  </article>
+
+  <!-- Post 6 -->
+  <article class="blog-card" tabindex="0" role="article" aria-labelledby="post6-title" aria-describedby="post6-desc">
+    <img src="https://www.edweek.org/technology/new-data-reveal-how-many-students-are-using-ai... .jpg" alt="Student overwhelmed by AI detection pressure" loading="lazy" />
+    <div class="blog-content">
+      <h2 id="post6-title">AI Got You Stressed? A Coach Can Help</h2>
+      <p id="post6-desc">If you're overwhelmed by AI tools and essay stress, discover how a writing coach like Brian can help you thrive.</p>
+      <a href="post6.html" class="read-more">Read More →</a>
     </div>
   </article>
 </main>
