--- a/blog.html
+++ b/blog.html
@@ -369,7 +369,7 @@
 
   <!-- Post 4 -->
   <article class="blog-card" tabindex="0" role="article" aria-labelledby="post4-title" aria-describedby="post4-desc">
-    <img src="https://vecteezy.com/free-photo/39272486-ai-generated-stressed-young-man-at-work.jpg" alt="Stressed student and glowing digital brain connection" loading="lazy" />
+    <img src="https://images.unsplash.com/photo-1601233742046-cd4f07b99ff8?auto=format&fit=crop&w=800&q=80" alt="Worried student staring at laptop screen" loading="lazy" />
     <div class="blog-content">
       <h2 id="post4-title">Is Your Essay “Too Perfect”? The Hidden AI Hurdles</h2>
       <p id="post4-desc">AI detectors flag essays that sound too good. Discover why and how it affects real students who write with excellence.</p>
@@ -379,7 +379,7 @@
 
   <!-- Post 5 -->
   <article class="blog-card" tabindex="0" role="article" aria-labelledby="post5-title" aria-describedby="post5-desc">
-    <img src="https://stock.adobe.com/fr/images/student-writing-on-notebook-while-study-at-home/454512386.jpg" alt="Student confidently writing at laptop" loading="lazy" />
+    <img src="https://images.unsplash.com/photo-1612197574188-4c3b1f7d0912?auto=format&fit=crop&w=800&q=80" alt="Confident student typing on laptop with books" loading="lazy" />
     <div class="blog-content">
       <h2 id="post5-title">Beat the Bots: Smart Strategies to Stay Human</h2>
       <p id="post5-desc">Worried about AI flags? Learn writing techniques that emphasize your voice, analysis, and authentic content.</p>
@@ -389,7 +389,7 @@
 
   <!-- Post 6 -->
   <article class="blog-card" tabindex="0" role="article" aria-labelledby="post6-title" aria-describedby="post6-desc">
-    <img src="https://www.edweek.org/technology/new-data-reveal-how-many-students-are-using-ai... .jpg" alt="Student overwhelmed by AI detection pressure" loading="lazy" />
+    <img src="https://images.unsplash.com/photo-1628595076793-2d6c6f20a49a?auto=format&fit=crop&w=800&q=80" alt="Stressed student surrounded by digital notifications" loading="lazy" />
     <div class="blog-content">
       <h2 id="post6-title">AI Got You Stressed? A Coach Can Help</h2>
       <p id="post6-desc">If you're overwhelmed by AI tools and essay stress, discover how a writing coach like Brian can help you thrive.</p>
