Add images to blog posts 4, 5, and 6 in blog.html

--- a/blog.html
+++ b/blog.html
@@ -370,30 +370,35 @@
 
   <!-- Post 4 -->
   <article class="blog-card" tabindex="0" role="article" aria-labelledby="post4-title" aria-describedby="post4-desc">
+    <img src="images/ai-hurdle.png" alt="Illustration of AI hurdles in academics" class="blog-card-image" />
     <div class="blog-content">
       <h2 id="post4-title">Is Your Essay “Too Perfect”? The Hidden AI Hurdles</h2>
       <p id="post4-desc">AI detectors flag essays that sound too good. Discover why and how it affects real students who write with excellence.</p>
       <a href="post4.html" class="read-more">Read More →</a>
-    </div>
-  </article>
+  </div>
+</article>
 
   <!-- Post 5 -->
   <article class="blog-card" tabindex="0" role="article" aria-labelledby="post5-title" aria-describedby="post5-desc">
+    <img src="images/beat-bots.png" alt="Beating AI bots in academic writing" class="blog-card-image" />
     <div class="blog-content">
       <h2 id="post5-title">Beat the Bots: Smart Strategies to Stay Human</h2>
       <p id="post5-desc">Worried about AI flags? Learn writing techniques that emphasize your voice, analysis, and authentic content.</p>
-      <a href="post5.html" class="read-more">Read More →</a>
-    </div>
-  </article>
+    <a href="post5.html" class="read-more">Read More →</a>
+  </div>
+</article>
 
   <!-- Post 6 -->
   <article class="blog-card" tabindex="0" role="article" aria-labelledby="post6-title" aria-describedby="post6-desc">
+    <img src="images/ai-stress.png" alt="Overcoming AI-related essay stress" class="blog-card-image" />
     <div class="blog-content">
       <h2 id="post6-title">AI Got You Stressed? A Coach Can Help</h2>
       <p id="post6-desc">If you're overwhelmed by AI tools and essay stress, discover how a writing coach like Brian can help you thrive.</p>
-      <a href="post6.html" class="read-more">Read More →</a>
-    </div>
-  </article>
+    <a href="post6.html" class="read-more">Read More →</a>
+  </div>
+</article>
+
+
 </main>
 
 <footer>
