Update: Added Resources link to navbar across all pages

--- a/Index.html
+++ b/Index.html
@@ -48,6 +48,7 @@
       <li><a href="contact.html"><span class="material-icons">mail</span> Contact</a></li>
       <li><a href="faq.html"><span class="material-icons">help</span> FAQ</a></li>
       <li><a href="blog.html"><span class="material-icons">article</span> Blog</a></li>
+      <li><a href="resources.html"><span class="material-icons">library_books</span> Resources</a></li>
     </ul>
     <button class="theme-toggle" onclick="toggleTheme()"><span class="material-icons">brightness_4</span></button>
   </div>
