--- a/Contact.html
+++ b/Contact.html
@@ -306,6 +306,7 @@
         <li role="none"><a href="contact.html" role="menuitem" class="active">Contact</a></li>
         <li role="none"><a href="faq.html" role="menuitem">FAQ</a></li>
         <li><a href="blog.html"><span class="material-icons">article</span> Blog</a></li>
+        <li><a href="resources.html"><span class="material-icons">library_books</span> Resources</a></li>
       </ul>
     </div>
   </nav>
