Updated resources.html with changes

--- a/resources.html
+++ b/resources.html
@@ -215,7 +215,7 @@
   <div class="resource-card" data-aos="zoom-in">
     <h3>AI Humanizer Tools</h3>
     <p>Make AI-generated text sound more human for improved originality and tone.</p>
-    <a href="https://www.humanizeai.ai/" target="_blank" rel="noopener">Visit Site</a>
+    <a href="https://stealthwriter.ai/" target="_blank" rel="noopener">Visit Site</a>
   </div>
 </section>
 
