Updated resources.html with changes

--- a/resources.html
+++ b/resources.html
@@ -217,6 +217,41 @@
     <p>Make AI-generated text sound more human for improved originality and tone.</p>
     <a href="https://stealthwriter.ai/" target="_blank" rel="noopener">Visit Site</a>
   </div>
+  <div class="resource-card" data-aos="zoom-in">
+    <h3>Zotero</h3>
+    <p>Free tool to collect, organize, and cite research sources in APA, MLA, and other formats.</p>
+    <a href="https://www.zotero.org" target="_blank" rel="noopener">Visit Site</a>
+  </div>
+
+  <div class="resource-card" data-aos="zoom-in">
+    <h3>Overleaf</h3>
+    <p>Online LaTeX editor for professional academic documents with downloadable templates.</p>
+    <a href="https://www.overleaf.com" target="_blank" rel="noopener">Visit Site</a>
+  </div>
+
+  <div class="resource-card" data-aos="zoom-in">
+    <h3>Scribbr Citation Generator</h3>
+    <p>Generate accurate citations in APA, MLA, and Chicago styles with helpful writing guides.</p>
+    <a href="https://www.scribbr.com/citation-generator/" target="_blank" rel="noopener">Visit Site</a>
+  </div>
+
+  <div class="resource-card" data-aos="zoom-in">
+    <h3>Notion AI</h3>
+    <p>AI-powered tool for organizing notes, study plans, and summarizing research effectively.</p>
+    <a href="https://www.notion.so/product/ai" target="_blank" rel="noopener">Visit Site</a>
+  </div>
+
+  <div class="resource-card" data-aos="zoom-in">
+    <h3>Purdue OWL</h3>
+    <p>Comprehensive writing and citation guides with downloadable examples for academic success.</p>
+    <a href="https://owl.purdue.edu" target="_blank" rel="noopener">Visit Site</a>
+  </div>
+
+  <div class="resource-card" data-aos="zoom-in">
+    <h3>Canva Academic Templates</h3>
+    <p>Free, downloadable templates for academic presentations, posters, and infographics.</p>
+    <a href="https://www.canva.com/education/templates/" target="_blank" rel="noopener">Visit Site</a>
+  </div>
 </section>
 
 <footer>
