Update Index.html and home.css

--- a/Index.html
+++ b/Index.html
@@ -93,7 +93,7 @@
       </div>
     </section>
 
-    <section class="testimonials" data-aos="fade-up">
+ <section class="testimonials" data-aos="fade-up">
   <h2>What Students Say</h2>
   <div class="testimonial-card">
     <p>"I was struggling with Turnitin constantly flagging my master's thesis for high AI content scores, even after multiple rewrites. Thanks to Brian's guidance, he helped me understand how to rephrase and properly cite sources so the originality score improved dramatically. His patience and expertise saved me from hours of frustration!"</p>
@@ -119,6 +119,13 @@
     <p>"Brian’s one-on-one coaching for my dissertation defense was a game-changer. He helped me anticipate tough questions, structure my responses, and build confidence. His personalized feedback made me feel fully prepared on the big day."</p>
     <cite>— Priya S., PhD Candidate</cite>
   </div>
+</section>
+
+<section class="featured-resource" data-aos="fade-up">
+  <h2>Featured Resource: Free APA Template</h2>
+  <p>Download our free APA 7th Edition template to format your essays and research papers with ease. Perfect for students aiming for academic excellence.</p>
+  <a href="https://www.smartessaycoach.com/assets/apa-template.docx" target="_blank" rel="noopener" class="cta">📥 Download Now</a>
+  <p>Explore more tools and templates on our <a href="resources.html" class="resource-link">Resources Page</a>.</p>
 </section>
 
     <section class="faq-preview" data-aos="fade-up" style="margin-top:2rem;">
